--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+altgraph==0.17.4
+bcrypt==4.3.0
 blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -15,11 +17,15 @@ mdurl==0.1.2
 ordered-set==4.1.0
 packaging==25.0
 Pygments==2.19.1
+pyinstaller==6.14.1
+pyinstaller-hooks-contrib==2025.5
 pymodbus==3.9.2
 python-dotenv==1.1.0
 requests==2.32.3
 rich==13.9.4
+setuptools==80.9.0
 typing_extensions==4.14.0
 urllib3==2.4.0
+waitress==3.0.2
 Werkzeug==3.1.3
 wrapt==1.17.2
