--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ altgraph==0.17.4
 bcrypt==4.3.0
 blinker==1.9.0
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.4
 Deprecated==1.2.18
 Flask==3.1.1
 Flask-Limiter==3.12
@@ -16,6 +18,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 ordered-set==4.1.0
 packaging==25.0
+pycparser==2.22
 Pygments==2.19.1
 pyinstaller==6.14.1
 pyinstaller-hooks-contrib==2025.5
@@ -23,7 +26,6 @@ pymodbus==3.9.2
 python-dotenv==1.1.0
 requests==2.32.3
 rich==13.9.4
-setuptools==80.9.0
 typing_extensions==4.14.0
 urllib3==2.4.0
 waitress==3.0.2
