update: telnetd start command

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:telnetd]
-command=/usr/sbin/telnetd -debug -F
+command=/usr/sbin/inetd -d
 autorestart=true
 
 [program:scada]
