--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -15,7 +15,7 @@ stderr_logfile_maxbytes=0
 
 [program:malicious]
 command=/opt/malicious
-autorestart=true
+autorestart=false
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
