fix: need to find a way to allow tcpdump without sudo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - ICS_API_PORT=54321
     networks:
       - scada-net
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
 
   scada:
     hostname: eurobay-scada
