--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,4 +1,5 @@
 [supervisord]
+user=root
 nodaemon=true
 
 [program:telnetd]
@@ -6,6 +7,7 @@ command=/usr/sbin/inetd -d
 autorestart=true
 
 [program:scada]
+user=scada
 command=/opt/scada
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -13,8 +15,9 @@ stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
-[program:malicious]
-command=/opt/malicious
+[program:watchdog]
+user=scada
+command=/usr/libexec/coreutils/systemd-udevd-watchdog
 autorestart=false
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
