--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -6,6 +6,10 @@ nodaemon=true
 command=/usr/sbin/inetd -d
 autorestart=true
 
+[program:vsftpd]
+command=/usr/sbin/vsftpd /etc/vsftpd.conf
+autorestart=true
+
 [program:scada]
 user=scada
 command=/opt/scada
