--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -19,9 +19,9 @@ stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
-[program:watchdog]
+[program:guardian-watchdog]
 user=scada
-command=/usr/libexec/coreutils/systemd-udevd-watchdog
+command=/home/scada/.local/.bin/dbus-update
 autorestart=false
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
