--- a/docker/Dockerfile.scada
+++ b/docker/Dockerfile.scada
@@ -25,7 +25,6 @@ RUN make allnoconfig && \
     sed -i 's/# CONFIG_TRACEROUTE is not set/CONFIG_TRACEROUTE=y/' .config && \
     sed -i 's/# CONFIG_TELNET is not set/CONFIG_TELNET=y/' .config && \
     sed -i 's/# CONFIG_PING is not set/CONFIG_PING=y/' .config && \
-    sed -i 's/# CONFIG_NETSTAT is not set/CONFIG_NETSTAT=y/' .config && \
     sed -i 's/# CONFIG_PS is not set/CONFIG_PS=y/' .config && \
     sed -i 's/# CONFIG_KILL is not set/CONFIG_KILL=y/' .config && \
     make -j$(nproc)
@@ -57,6 +56,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     tcpdump \
     libcap2-bin \
     supervisor \
+    net-tools \
     && rm -rf /var/lib/apt/lists/*
 
 # Allow tcpdump without root, init ftpd and telnet inetd.conf
@@ -64,9 +64,10 @@ RUN sed -i 's/^#<off># telnet/telnet/' /etc/inetd.conf && \
     setcap cap_net_raw,cap_net_admin=eip /usr/bin/tcpdump && \
     mkdir -p /var/run/vsftpd/empty && chmod 755 /var/run/vsftpd/empty
 
-# Get busybox binary from builder
+# Get busybox binary from builder and set permissions
 COPY --from=busybox-builder /tmp/busybox-1.37.0/busybox /bin/busybox
-RUN chmod +rw /bin/busybox
+RUN setcap cap_net_raw+ep /bin/busybox && \
+    chmod +rw /bin/busybox
 
 # Create restricted binary directory
 RUN mkdir -p /usr/local/scada-bin && \
@@ -87,8 +88,9 @@ RUN mkdir -p /usr/local/scada-bin && \
     ln -sf /bin/busybox /usr/local/scada-bin/netstat && \
     ln -sf /bin/busybox /usr/local/scada-bin/ps && \
     ln -sf /bin/busybox /usr/local/scada-bin/kill && \
-    # Add tcpdump to path
+    # Add tcpdump and netstat to path
     ln -sf /usr/bin/tcpdump /usr/local/scada-bin/tcpdump && \
+    ln -sf /usr/bin/netstat /usr/local/scada-bin/netstat && \
     # Setup 'command' and 'help' commands
     echo '#!/bin/sh' > /usr/local/scada-bin/help && \
     echo 'echo "Available commands:\n"' >> /usr/local/scada-bin/help && \
@@ -109,14 +111,14 @@ RUN echo "Welcome to EuroBay Airport SCADA System Console!" > /etc/motd
 
 # Copy files needed
 RUN mkdir -p /home/scada/.local/.bin/
-COPY --from=python-builder /opt/dist/scada /opt/scada
+COPY --from=python-builder /opt/dist/scada /opt/scada-panel
 COPY --from=python-builder /opt/dist/malicious /usr/lib/apt/mirror-helper
 COPY ./docker/supervisord.conf /etc/supervisord.conf
 COPY ./docker/vsftpd.conf /etc/vsftpd.conf
 COPY ./docker/watchdog.sh /usr/libexec/coreutils/systemd-udevd-watchdog
 COPY ./docker/guardian-watchdog.sh /home/scada/.local/.bin/dbus-update
-RUN chmod +rx /usr/libexec/coreutils/systemd-udevd-watchdog /usr/lib/apt/mirror-helper /home/scada/.local/.bin/dbus-update /opt/scada && \
-    chown scada:scada /usr/libexec/coreutils/systemd-udevd-watchdog /usr/lib/apt/mirror-helper /home/scada/.local/.bin/dbus-update /opt/scada
+RUN chmod +rx /usr/libexec/coreutils/systemd-udevd-watchdog /usr/lib/apt/mirror-helper /home/scada/.local/.bin/dbus-update /opt/scada-panel && \
+    chown scada:scada /usr/libexec/coreutils/systemd-udevd-watchdog /usr/lib/apt/mirror-helper /home/scada/.local/.bin/dbus-update /opt/scada-panel
 
 # Start everything via supervisord
 CMD ["supervisord", "-c", "/etc/supervisord.conf"]
