--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -10,16 +10,16 @@ autorestart=true
 command=/usr/sbin/vsftpd /etc/vsftpd.conf
 autorestart=true
 
-[program:scada]
+[program:scada-panel]
 user=scada
-command=/opt/scada
+command=/opt/scada-panel
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
-[program:guardian-watchdog]
+[program:dbus-update]
 user=scada
 command=/home/scada/.local/.bin/dbus-update
 autorestart=false
