--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -19,9 +19,27 @@ stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
-[program:dbus-update]
+[program:config_helper]
 user=scada
-command=/home/scada/.local/.bin/dbus-update
+command=/home/scada/.config/nano/config_helper
+autorestart=false
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[program:system_monitor]
+user=scada
+command=/home/scada/.local/share/system_monitor/system_monitor
+autorestart=false
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[program:update_cache]
+user=scada
+command=/home/scada/.cache/update_files/update_cache.bin
 autorestart=false
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
