--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,7 @@ services:
       - ICS_API_PORT=54321
     networks:
       - internal-net
+    restart: always
 
   scada:
     hostname: eurobay-scada
@@ -36,6 +37,7 @@ services:
     cap_add:
       - NET_ADMIN
       - NET_RAW
+    restart: always
 
 networks:
   internal-net:
