--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.ics
-    image: ics_image
+    image: eatmcert/runway-lights:ics
     container_name: ics
     environment:
       - ICS_SERVER_PORT=502
@@ -18,13 +18,13 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.scada
-    image: scada_image
+    image: eatmcert/runway-lights:scada
     container_name: scada
     ports:
-      - "192.168.1.20:80:80"
-      - "192.168.1.20:23:23"
-      - "192.168.1.20:21:21"
-      - "192.168.1.20:30000-30001:30000-30001"
+      - "80:80"
+      - "23:23"
+      - "21:21"
+      - "30000-30001:30000-30001"
     environment:
       - ICS_SERVER_PORT=502
       - ICS_SERVER_IP=ics
