change: allowing ftp get from outisde home

--- a/docker/vsftpd.conf
+++ b/docker/vsftpd.conf
@@ -3,8 +3,8 @@ listen_ipv6=NO
 anonymous_enable=NO
 local_enable=YES
 write_enable=NO
-chroot_local_user=YES
-allow_writeable_chroot=YES
+chroot_local_user=NO
+allow_writeable_chroot=NO
 local_umask=022
 pasv_enable=YES
 pasv_min_port=30000
