fix: problem with VM bridged adapter when ips collide

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,8 +30,7 @@ services:
       - ICS_SERVER_IP=ics
       - SCADA_WEB_PORT=80
     networks:
-      internal-net:
-        ipv4_address: 192.168.1.20
+      - internal-net
     depends_on:
       - ics
     cap_add:
@@ -42,6 +41,3 @@ services:
 networks:
   internal-net:
     driver: bridge
-    ipam:
-      config:
-      - subnet: 192.168.1.0/24
